<resources>
    <string name="app_name">Airtime Manager Pro</string>
    <string name="number_zero">0</string>
    <string name="number_one">1</string>
    <string name="number_two">2</string>
    <string name="number_three">3</string>
    <string name="number_four">4</string>
    <string name="number_five">5</string>
    <string name="number_six">6</string>
    <string name="number_seven">7</string>
    <string name="number_eight">8</string>
    <string name="number_nine">9</string>
    <string name="btn_clear">Clear</string>
    <string name="btn_backspace">Del</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="tab_text_1">PREPAID</string>
    <string name="tab_text_2">POSTPAID</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_stats">Stats</string>
    <string name="title_activity_sta">Sta</string>
    <string name="title_activity_new_statistics">NewStatistics</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_frag">frag</string>
    <string name="title_activity_new_new">NewNew</string>
</resources>
